--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>Hello, I'm Daksh Aggarwal</h1>
+            <h1>Hello, I'm <span class="neon-text">Daksh Aggarwal</span></h1>
             <p class="bio">I'm a recent 12th-grade graduate from Delhi Public School Nacharam with a passion for Mathematics and coding. I'm exploring Python and C programming while working on various academic projects. I've been involved in community work and have a strong interest in volunteering and leadership roles. My focus is on continuous learning and contributing to impactful projects.</p>
         </header>
         <section class="social-links">
