--- a/contact.html
+++ b/contact.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Daksh Aggarwal - Personal Website">
-    <title>Daksh Aggarwal</title>
+    <title>Contact - Daksh Aggarwal</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -12,8 +11,8 @@
     <div class="background"></div>
     <div class="container">
         <header>
-            <h1>Hello, I'm <span class="neon-text">Daksh Aggarwal</span></h1>
-            <p class="bio">I'm a recent 12th-grade graduate from Delhi Public School Nacharam with a passion for Mathematics and coding. I'm exploring Python and C programming while working on various academic projects. I've been involved in community work and have a strong interest in volunteering and leadership roles. My focus is on continuous learning and contributing to impactful projects.</p>
+            <h1>Contact</h1>
+            <p>If you'd like to get in touch, feel free to connect with me on any of the platforms below!</p>
         </header>
         <section class="social-links">
             <h2>Connect with me:</h2>
@@ -27,9 +26,9 @@
         </section>
         <nav>
             <ul>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Me</a></li>
                 <li><a href="projects.html">Projects</a></li>
-                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </div>
