--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <li><a href="https://www.linkedin.com/in/dakshaggarwal7/" target="_blank"><img src="https://img.icons8.com/color/48/000000/linkedin-circled--v1.png" alt="LinkedIn" /> LinkedIn</a></li>
                 <li><a href="https://instagram.com/daksh.fr" target="_blank"><img src="https://img.icons8.com/color/48/000000/instagram-new.png" alt="Instagram" /> Instagram</a></li>
                 <li><a href="https://github.com/Daksh-Aggarwal" target="_blank"><img src="https://img.icons8.com/material-outlined/48/000000/github.png" alt="GitHub" /> GitHub</a></li>
-                <li><a href="mailto:your.email@example.com?subject=Hello&body=Hi%20Daksh,%20I%20would%20like%20to%20connect%20with%20you." target="_blank"><img src="https://img.icons8.com/color/48/000000/mail.png" alt="Email" /> Email</a></li>
+                <li><a href="mailto:your.email@example.com?subject=Hello&body=Hi%20Daksh,%20I%20would%20like%20to%20connect%20with%20you." target="_blank"><img src="https://mailmeteor.com/logos/assets/PNG/Gmail_Logo_512px.png" alt="Email" /> Email</a></li>
                 <li><a href="#"><img src="https://img.icons8.com/color/48/000000/discord.png" alt="Discord" /> Discord: itsmedakshgamer</a></li>
             </ul>
         </section>
