--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Daksh Aggarwal - Personal Website">
     <title>Daksh Aggarwal</title>
+    <link rel="icon" href="data:image/svg+xml;utf8,<svg width='16' height='16' viewBox='0 0 16 16' fill='none' xmlns='http://www.w3.org/2000/svg'><path d='M8 0L16 8L8 16L0 8L8 0Z' fill='black'/></svg>" type="image/svg+xml">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&family=Montserrat:wght@600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-</head>
+</head>    
 <body>
     <div class="background"></div>
     <div class="container">
@@ -21,7 +22,7 @@
                 <li><a href="https://www.linkedin.com/in/dakshaggarwal7/" target="_blank"><img src="https://img.icons8.com/color/48/000000/linkedin-circled--v1.png" alt="LinkedIn" /> LinkedIn</a></li>
                 <li><a href="https://instagram.com/daksh.fr" target="_blank"><img src="https://img.icons8.com/color/48/000000/instagram-new.png" alt="Instagram" /> Instagram</a></li>
                 <li><a href="https://github.com/Daksh-Aggarwal" target="_blank"><img src="https://img.icons8.com/material-outlined/48/000000/github.png" alt="GitHub" /> GitHub</a></li>
-                <li><a href="mailto:your.email@example.com?subject=Hello&body=Hi%20Daksh,%20I%20would%20like%20to%20connect%20with%20you." target="_blank"><img src="https://mailmeteor.com/logos/assets/PNG/Gmail_Logo_512px.png" alt="Email" /> Email</a></li>
+                <li><a href="mailto:your.email@example.com?subject=Hello&body=Hi%20Daksh,%20I%20would%20like%20to%20connect%20with%20you." target="_blank"><img src="https://img.icons8.com/?size=100&id=P7UIlhbpWzZm&format=png&color=000000" alt="Email" /> Email</a></li>
                 <li><a href="#"><img src="https://img.icons8.com/color/48/000000/discord.png" alt="Discord" /> Discord: itsmedakshgamer</a></li>
             </ul>
         </section>
